Remove mounting to log directory from docker run commands

--- a/driver_test_scores/configs/detailed_subset.yaml
+++ b/driver_test_scores/configs/detailed_subset.yaml
@@ -27,7 +27,7 @@ workflow:
       dependencies: ["read_file"]
 
     - id: older_than_forty_sample
-      action: SAMPLE_CUSTOM_PANDAS
+      action: SAMPLE_WITH_QUERY
       parameters:
         query: "age > 40"
       dependencies: ["read_file"]
