rename yaml file as custom_subset

--- a/driver_test_scores/configs/custom_subset.yaml
+++ b/driver_test_scores/configs/custom_subset.yaml
@@ -42,10 +42,10 @@ workflow:
         keep: "first"
       dependencies: ["merge_samples"]
 
-    - id: sort_by_id
+    - id: sort_by_age
       action: SORT
       parameters:
-        by: "id"
+        by: "age"
       dependencies: ["deduplicate"]
 
     - id: write_file
@@ -56,7 +56,7 @@ workflow:
         index: false
         orient: records
         lines: true
-      dependencies: ["sort_by_id"]
+      dependencies: ["sort_by_age"]
 
 workflow_runner:
   cluster_class: "dask.distributed.LocalCluster"
